Enforce the scrollbar to always appear to avoid flickering when navigating between pages

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -48,6 +48,7 @@ html {
     display: flex;
     flex-direction: column;
     transition: var(--transition-bg-color);
+    overflow-y: scroll;
 
     &.dark {
         background-color: var(--color-black);
